--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="glosario">
 			<h1>glosario informatico</h1>
 			<p> Un glosario es un catálogo alfabetizado de las palabras y expresiones de uno o varios textos que son difíciles de comprender, junto con su significado o algún comentario.</p>
-				<img src="JPG/duda.JPG">
+		        <img src="JPG/duda.jpg">
 			<p>En la informatica o en las diferentes carreras tanto como en centros de servicio nos brindan información y/o explicaciones acerca de ciertos equipos en el cual puede ser seguro que no sepamos el significado del concepto. A continuacion les brindamos un glosario con las palabras básicas para asi tener un poco mas de conocimiento y lograr asi entender mejor la informacion y/o explicaciones que nos dan.</p></div>
 
 
